// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test SqlUploadContent renders SQL upload content based on the current upload type 1`] = `
<Form
  form={
    {
      "__INTERNAL__": {
        "itemRef": [Function],
      },
      "_init": true,
      "getFieldError": [Function],
      "getFieldInstance": [Function],
      "getFieldValue": [Function],
      "getFieldWarning": [Function],
      "getFieldsError": [Function],
      "getFieldsValue": [Function],
      "getInternalHooks": [Function],
      "isFieldTouched": [Function],
      "isFieldValidating": [Function],
      "isFieldsTouched": [Function],
      "isFieldsValidating": [Function],
      "resetFields": [Function],
      "scrollToField": [Function],
      "setFieldValue": [Function],
      "setFields": [Function],
      "setFieldsValue": [Function],
      "submit": [Function],
      "validateFields": [Function],
    }
  }
>
  <SqlUploadContent
    currentSqlUploadType="form_data"
    dbSourceInfoCollection={
      {
        "set": [MockFunction],
        "value": {},
      }
    }
    fieldPrefixPath="1"
  />
</Form>
`;

exports[`test SqlUploadContent renders SQL upload content based on the current upload type 2`] = `
<Form
  form={
    {
      "__INTERNAL__": {
        "itemRef": [Function],
      },
      "_init": true,
      "getFieldError": [Function],
      "getFieldInstance": [Function],
      "getFieldValue": [Function],
      "getFieldWarning": [Function],
      "getFieldsError": [Function],
      "getFieldsValue": [Function],
      "getInternalHooks": [Function],
      "isFieldTouched": [Function],
      "isFieldValidating": [Function],
      "isFieldsTouched": [Function],
      "isFieldsValidating": [Function],
      "resetFields": [Function],
      "scrollToField": [Function],
      "setFieldValue": [Function],
      "setFields": [Function],
      "setFieldsValue": [Function],
      "submit": [Function],
      "validateFields": [Function],
    }
  }
>
  <SqlUploadContent
    currentSqlUploadType="zip_file"
    dbSourceInfoCollection={
      {
        "set": [MockFunction],
        "value": {},
      }
    }
    fieldPrefixPath="1"
  />
</Form>
`;

exports[`test SqlUploadContent renders SQL upload content based on the current upload type 3`] = `
<Form
  form={
    {
      "__INTERNAL__": {
        "itemRef": [Function],
      },
      "_init": true,
      "getFieldError": [Function],
      "getFieldInstance": [Function],
      "getFieldValue": [Function],
      "getFieldWarning": [Function],
      "getFieldsError": [Function],
      "getFieldsValue": [Function],
      "getInternalHooks": [Function],
      "isFieldTouched": [Function],
      "isFieldValidating": [Function],
      "isFieldsTouched": [Function],
      "isFieldsValidating": [Function],
      "resetFields": [Function],
      "scrollToField": [Function],
      "setFieldValue": [Function],
      "setFields": [Function],
      "setFieldsValue": [Function],
      "submit": [Function],
      "validateFields": [Function],
    }
  }
>
  <SqlUploadContent
    currentSqlUploadType="audit_plan"
    dbSourceInfoCollection={
      {
        "set": [MockFunction],
        "value": {},
      }
    }
    fieldPrefixPath="1"
  />
</Form>
`;
